cmake_minimum_required(VERSION 3.23)
project(STL_learning)

set(CMAKE_CXX_STANDARD 14)

include_directories(SequenceContainer/list_container/include)
include_directories(SequenceContainer/stack_container/include)
include_directories(my_config.h)
add_executable(STL_learning main.cpp )
add_executable(list_container_test SequenceContainer/list_container/test.cpp SequenceContainer/deque_container/mydeque.h)
add_executable(deque_container_test SequenceContainer/deque_container/test.cpp)
add_executable(stack_container_test SequenceContainer/stack_container/stack_test.cpp)
add_executable(queue_container_test SequenceContainer/queue_container/queue_test.cpp)
add_executable(heap_container_test SequenceContainer/heap/heap_test.cpp)
add_executable(priority_queue_test SequenceContainer/priority_queue/test.cpp)
add_executable(slist_test SequenceContainer/slist_container/test.cpp)
add_executable(RBtree AssociativeContainer/RBtree/test.cpp)
add_executable(Set  AssociativeContainer/Set/test.cpp)
add_executable(map AssociativeContainer/map/test.cpp)
add_executable(hashtable AssociativeContainer/hashtable/test.cpp)
add_executable(hashset AssociativeContainer/HashSet/test.cpp)
add_executable(vector SequenceContainer/vector_container/test.cpp)
add_executable(numeric Algorithms/my_numeric/test.cpp)
add_executable(algobase Algorithms/my_algobase/test.cpp)
add_executable(construct myalloc/test.cpp)
add_executable(functional functional/test.cpp)
add_executable(Adapters Adapters/test.cpp)
add_executable(cyhszz Adapters/cyhszz.cpp)